// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DockerfileSettings should match snapshot with children 1`] = `
<body>
  <div>
    <form
      class="w-full space-y-10"
    >
      <div
        class=""
      >
        <div
          class="input input--select    "
          data-testid="select"
        >
          <label
            class="!translate-y-0 !text-xs"
            for="File source"
          >
            File source
          </label>
          <div
            class=" css-b62m3t-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-3-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="input-select__control css-13cymwt-control"
            >
              <div
                class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <span
                  class="mr-1 text-sm text-neutral-400"
                >
                  Git repository
                </span>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="File source"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="File source"
              type="hidden"
              value="GIT_REPOSITORY"
            />
          </div>
          <input
            name="File source"
            type="hidden"
            value="GIT_REPOSITORY"
          />
          <div
            class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
          >
            <span
              class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
              role="img"
            />
          </div>
        </div>
      </div>
      <section
        class="flex flex-col gap-6"
      >
        <div>
          <h1
            class="text-neutral-400 text-xl font-bold mb-2"
          >
            Dockerfile from git repository
          </h1>
          <p
            class="text-sm text-neutral-350"
          >
            Specify the path containing the Dockerfile to be used to package your application.
          </p>
        </div>
        <div
          class=""
          data-testid="input-text-dockerfile-wrapper"
        >
          <div
            class="relative"
          >
            <div
              aria-label="input-container"
              class="input    input--label-up "
            >
              <div
                class=""
              >
                <label
                  class="translate-y-2 text-sm"
                  for="Dockerfile path"
                >
                  Dockerfile path
                </label>
                <input
                  class="input__value "
                  data-testid="input-text-dockerfile"
                  id="Dockerfile path"
                  name="dockerfile_path"
                  type="text"
                  value="Dockerfile"
                />
              </div>
            </div>
          </div>
          <p
            class="mt-0.5 px-3 text-xs font-normal text-neutral-350 dark:text-neutral-50"
          >
            <span>
              Specify the location of your dockerfile. Expected format: myapp/Dockerfile
            </span>
            <br />
            <a
              class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-sky-500 hover:text-sky-600 text-xs"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create one with Docker init
              <i
                aria-hidden="true"
                class="fa-solid fa-arrow-up-right-from-square text-2xs leading-4"
              />
            </a>
          </p>
        </div>
      </section>
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</body>
`;

exports[`DockerfileSettings should match snapshot without children 1`] = `
<body>
  <div>
    <form
      class="w-full space-y-10"
    >
      <div
        class=""
      >
        <div
          class="input input--select    "
          data-testid="select"
        >
          <label
            class="!translate-y-0 !text-xs"
            for="File source"
          >
            File source
          </label>
          <div
            class=" css-b62m3t-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-2-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="input-select__control css-13cymwt-control"
            >
              <div
                class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <span
                  class="mr-1 text-sm text-neutral-400"
                >
                  Git repository
                </span>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="File source"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="File source"
              type="hidden"
              value="GIT_REPOSITORY"
            />
          </div>
          <input
            name="File source"
            type="hidden"
            value="GIT_REPOSITORY"
          />
          <div
            class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
          >
            <span
              class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
              role="img"
            />
          </div>
        </div>
      </div>
      <section
        class="flex flex-col gap-6"
      >
        <div>
          <h1
            class="text-neutral-400 text-xl font-bold mb-2"
          >
            Dockerfile from git repository
          </h1>
          <p
            class="text-sm text-neutral-350"
          >
            Specify the path containing the Dockerfile to be used to package your application.
          </p>
        </div>
        <div
          class=""
          data-testid="input-text-dockerfile-wrapper"
        >
          <div
            class="relative"
          >
            <div
              aria-label="input-container"
              class="input    input--label-up "
            >
              <div
                class=""
              >
                <label
                  class="translate-y-2 text-sm"
                  for="Dockerfile path"
                >
                  Dockerfile path
                </label>
                <input
                  class="input__value "
                  data-testid="input-text-dockerfile"
                  id="Dockerfile path"
                  name="dockerfile_path"
                  type="text"
                  value="Dockerfile"
                />
              </div>
            </div>
          </div>
          <p
            class="mt-0.5 px-3 text-xs font-normal text-neutral-350 dark:text-neutral-50"
          >
            <span>
              Specify the location of your dockerfile. Expected format: myapp/Dockerfile
            </span>
            <br />
            <a
              class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-sky-500 hover:text-sky-600 text-xs"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create one with Docker init
              <i
                aria-hidden="true"
                class="fa-solid fa-arrow-up-right-from-square text-2xs leading-4"
              />
            </a>
          </p>
        </div>
      </section>
    </form>
  </div>
</body>
`;
